third_party/flutter_litert/lib/src/bindings/tensorflow_lite_bindings_generated.dart


  /// Returns the key of the Nth signature in the model, where N is specified as
  /// `signature_index`.
  ///
  /// NOTE: The lifetime of the returned key is the same as (and depends on) the
  /// lifetime of `interpreter`.
  ffi.Pointer<ffi.Char> TfLiteInterpreterGetSignatureKey(
    ffi.Pointer<TfLiteInterpreter> interpreter,
    int signature_index,
  ) {
    return _TfLiteInterpreterGetSignatureKey(interpreter, signature_index);
  }

  late final _TfLiteInterpreterGetSignatureKeyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<TfLiteInterpreter>,
            ffi.Int32,
          )
        >
      >('TfLiteInterpreterGetSignatureKey');
  late final _TfLiteInterpreterGetSignatureKey =
      _TfLiteInterpreterGetSignatureKeyPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<TfLiteInterpreter>, int)
      >();

  /// Returns a new signature runner using the provided interpreter and signature
  /// key, or nullptr on failure.
  ///
  /// NOTE: `signature_key` is a null-terminated C string that must match the
  /// key of a signature in the interpreter's model.
  ///
  /// NOTE: The returned signature runner should be destroyed, by calling
  /// TfLiteSignatureRunnerDelete(), before the interpreter is destroyed.
  ffi.Pointer<TfLiteSignatureRunner> TfLiteInterpreterGetSignatureRunner(
    ffi.Pointer<TfLiteInterpreter> interpreter,
    ffi.Pointer<ffi.Char> signature_key,
  ) {
    return _TfLiteInterpreterGetSignatureRunner(interpreter, signature_key);
  }

  late final _TfLiteInterpreterGetSignatureRunnerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteSignatureRunner> Function(
            ffi.Pointer<TfLiteInterpreter>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('TfLiteInterpreterGetSignatureRunner');
  late final _TfLiteInterpreterGetSignatureRunner =
      _TfLiteInterpreterGetSignatureRunnerPtr.asFunction<
        ffi.Pointer<TfLiteSignatureRunner> Function(
          ffi.Pointer<TfLiteInterpreter>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Returns the number of inputs associated with a signature.
  int TfLiteSignatureRunnerGetInputCount(
    ffi.Pointer<TfLiteSignatureRunner> signature_runner,
  ) {
    return _TfLiteSignatureRunnerGetInputCount(signature_runner);
  }

  late final _TfLiteSignatureRunnerGetInputCountPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<TfLiteSignatureRunner>)
        >
      >('TfLiteSignatureRunnerGetInputCount');
  late final _TfLiteSignatureRunnerGetInputCount =
      _TfLiteSignatureRunnerGetInputCountPtr.asFunction<
        int Function(ffi.Pointer<TfLiteSignatureRunner>)
      >();

  /// Returns the (null-terminated) name of the Nth input in a signature, where N
  /// is specified as `input_index`.
  ///
  /// NOTE: The lifetime of the returned name is the same as (and depends on) the
  /// lifetime of `signature_runner`.
  ffi.Pointer<ffi.Char> TfLiteSignatureRunnerGetInputName(
    ffi.Pointer<TfLiteSignatureRunner> signature_runner,
    int input_index,
  ) {
    return _TfLiteSignatureRunnerGetInputName(signature_runner, input_index);
  }

  late final _TfLiteSignatureRunnerGetInputNamePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<TfLiteSignatureRunner>,
            ffi.Int32,
          )
        >
      >('TfLiteSignatureRunnerGetInputName');
  late final _TfLiteSignatureRunnerGetInputName =
      _TfLiteSignatureRunnerGetInputNamePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<TfLiteSignatureRunner>, int)
      >();

  /// Resizes the input tensor identified as `input_name` to be the dimensions
  /// specified by `input_dims` and `input_dims_size`. Only unknown dimensions can
  /// be resized with this function. Unknown dimensions are indicated as `-1` in
  /// the `dims_signature` attribute of a TfLiteTensor.
  ///
  /// Returns status of failure or success. Note that this doesn't actually resize
  /// any existing buffers. A call to TfLiteSignatureRunnerAllocateTensors() is
  /// required to change the tensor input buffer.
  ///
  /// NOTE: This function is similar to TfLiteInterpreterResizeInputTensorStrict()
  /// and not TfLiteInterpreterResizeInputTensor().
  ///
  /// NOTE: `input_name` must match the name of an input in the signature.
  ///
  /// NOTE: This function makes a copy of the input dimensions, so the caller can
  /// safely deallocate `input_dims` immediately after this function returns.
  int TfLiteSignatureRunnerResizeInputTensor(
    ffi.Pointer<TfLiteSignatureRunner> signature_runner,
    ffi.Pointer<ffi.Char> input_name,
    ffi.Pointer<ffi.Int> input_dims,
    int input_dims_size,
  ) {
    return _TfLiteSignatureRunnerResizeInputTensor(
      signature_runner,
      input_name,
      input_dims,
      input_dims_size,
    );
  }

  late final _TfLiteSignatureRunnerResizeInputTensorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<TfLiteSignatureRunner>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Int>,
            ffi.Int32,
          )
        >
      >('TfLiteSignatureRunnerResizeInputTensor');
  late final _TfLiteSignatureRunnerResizeInputTensor =
      _TfLiteSignatureRunnerResizeInputTensorPtr.asFunction<
        int Function(
          ffi.Pointer<TfLiteSignatureRunner>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Int>,
          int,
        )
      >();

  /// Updates allocations for tensors associated with a signature and resizes
  /// dependent tensors using the specified input tensor dimensionality.
  /// This is a relatively expensive operation and hence should only be called
  /// after initializing the signature runner object and/or resizing any inputs.
  int TfLiteSignatureRunnerAllocateTensors(
    ffi.Pointer<TfLiteSignatureRunner> signature_runner,
  ) {
    return _TfLiteSignatureRunnerAllocateTensors(signature_runner);
  }

  late final _TfLiteSignatureRunnerAllocateTensorsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<TfLiteSignatureRunner>)
        >
      >('TfLiteSignatureRunnerAllocateTensors');
  late final _TfLiteSignatureRunnerAllocateTensors =
      _TfLiteSignatureRunnerAllocateTensorsPtr.asFunction<
        int Function(ffi.Pointer<TfLiteSignatureRunner>)
      >();

  /// Returns the input tensor identified by `input_name` in the given signature.
  /// Returns nullptr if the given name is not valid.
  ///
  /// NOTE: The lifetime of the returned tensor is the same as (and depends on)
  /// the lifetime of `signature_runner`.
  ffi.Pointer<TfLiteTensor> TfLiteSignatureRunnerGetInputTensor(
    ffi.Pointer<TfLiteSignatureRunner> signature_runner,
    ffi.Pointer<ffi.Char> input_name,
  ) {
    return _TfLiteSignatureRunnerGetInputTensor(signature_runner, input_name);
  }

  late final _TfLiteSignatureRunnerGetInputTensorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteTensor> Function(
            ffi.Pointer<TfLiteSignatureRunner>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('TfLiteSignatureRunnerGetInputTensor');
  late final _TfLiteSignatureRunnerGetInputTensor =
      _TfLiteSignatureRunnerGetInputTensorPtr.asFunction<
        ffi.Pointer<TfLiteTensor> Function(
          ffi.Pointer<TfLiteSignatureRunner>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Runs inference on a given signature.
  ///
  /// Before calling this function, the caller should first invoke
  /// TfLiteSignatureRunnerAllocateTensors() and should also set the values for
  /// the input tensors. After successfully calling this function, the values for
  /// the output tensors will be set.
  int TfLiteSignatureRunnerInvoke(
    ffi.Pointer<TfLiteSignatureRunner> signature_runner,
  ) {
    return _TfLiteSignatureRunnerInvoke(signature_runner);
  }

  late final _TfLiteSignatureRunnerInvokePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<TfLiteSignatureRunner>)
        >
      >('TfLiteSignatureRunnerInvoke');
  late final _TfLiteSignatureRunnerInvoke =
      _TfLiteSignatureRunnerInvokePtr.asFunction<
        int Function(ffi.Pointer<TfLiteSignatureRunner>)
      >();

  /// Returns the number of output tensors associated with the signature.
  int TfLiteSignatureRunnerGetOutputCount(
    ffi.Pointer<TfLiteSignatureRunner> signature_runner,
  ) {
    return _TfLiteSignatureRunnerGetOutputCount(signature_runner);
  }

  late final _TfLiteSignatureRunnerGetOutputCountPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<TfLiteSignatureRunner>)
        >
      >('TfLiteSignatureRunnerGetOutputCount');
  late final _TfLiteSignatureRunnerGetOutputCount =
      _TfLiteSignatureRunnerGetOutputCountPtr.asFunction<
        int Function(ffi.Pointer<TfLiteSignatureRunner>)
      >();

  /// Returns the (null-terminated) name of the Nth output in a signature, where
  /// N is specified as `output_index`.
  ///
  /// NOTE: The lifetime of the returned name is the same as (and depends on) the
  /// lifetime of `signature_runner`.
  ffi.Pointer<ffi.Char> TfLiteSignatureRunnerGetOutputName(
    ffi.Pointer<TfLiteSignatureRunner> signature_runner,
    int output_index,
  ) {
    return _TfLiteSignatureRunnerGetOutputName(signature_runner, output_index);
  }

  late final _TfLiteSignatureRunnerGetOutputNamePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<TfLiteSignatureRunner>,
            ffi.Int32,
          )
        >
      >('TfLiteSignatureRunnerGetOutputName');
  late final _TfLiteSignatureRunnerGetOutputName =
      _TfLiteSignatureRunnerGetOutputNamePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<TfLiteSignatureRunner>, int)
      >();

  /// Returns the output tensor identified by `output_name` in the given
  /// signature. Returns nullptr if the given name is not valid.
  ///
  /// NOTE: The lifetime of the returned tensor is the same as (and depends on)
  /// the lifetime of `signature_runner`.
  ffi.Pointer<TfLiteTensor> TfLiteSignatureRunnerGetOutputTensor(
    ffi.Pointer<TfLiteSignatureRunner> signature_runner,
    ffi.Pointer<ffi.Char> output_name,
  ) {
    return _TfLiteSignatureRunnerGetOutputTensor(signature_runner, output_name);
  }

  late final _TfLiteSignatureRunnerGetOutputTensorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteTensor> Function(
            ffi.Pointer<TfLiteSignatureRunner>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('TfLiteSignatureRunnerGetOutputTensor');
  late final _TfLiteSignatureRunnerGetOutputTensor =
      _TfLiteSignatureRunnerGetOutputTensorPtr.asFunction<
        ffi.Pointer<TfLiteTensor> Function(
          ffi.Pointer<TfLiteSignatureRunner>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Returns the type of a tensor element.
  int TfLiteTensorType(ffi.Pointer<TfLiteTensor> tensor) {
    return _TfLiteTensorType(tensor);
  }

  late final _TfLiteTensorTypePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<TfLiteTensor>)>
      >('TfLiteTensorType');
  late final _TfLiteTensorType =
      _TfLiteTensorTypePtr.asFunction<
        int Function(ffi.Pointer<TfLiteTensor>)
      >();

  /// Returns the number of dimensions that the tensor has.  Returns -1 in case
  /// the 'opaque_tensor' does not have its dimensions property set.
  int TfLiteTensorNumDims(ffi.Pointer<TfLiteTensor> tensor) {
    return _TfLiteTensorNumDims(tensor);
  }
